Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 <p align="center">
   <i>Let's connect and chat! Open to anyone on Earth under the Sun and Moon.</i>
   </p><p align="center">
-    <a href="https://twitter.com/FTKhanFT" alt="Twitter"><img src="https://github.com/FTKhanFT/FTKhanFT/blob/master/img/twitter-line.png"></a>
-    <a href="https://www.linkedin.com/in/FTKhanFT/" alt="Linkedin"><img src="https://github.com/FTKhanFT/FTKhanFT/blob/master/img/linkedin-box-line.png"></a>
-    <a href="https://www.instagram.com/_ftkhan_" alt="Instagram"><img src="https://github.com/FTKhanFT/FTKhanFT/blob/master/img/instagram-line.png"></a>
-    <a href="https://www.facebook.com/FTKhanFT/" alt="Facebook"><img src="https://github.com/FTKhanFT/FTKhanFT/blob/master/img/facebook-circle-line.png"></a>
-    <a href="https://github.com/FTKhanFT" alt="GitHub"><img src="https://github.com/FTKhanFT/FTKhanFT/blob/master/img/github-fill.png"></a>
-    <a href="https://medium.com/@FTKhanFT" alt="Medium"><img src="https://github.com/FTKhanFT/FTKhanFT/blob/master/img/medium-line.png"></a>
+**[Twitter](https://twitter.com/FTKhanFT)**
+**[Linkedin](https://www.linkedin.com/in/FTKhanFT/)**
+**[Instagram](https://www.instagram.com/_ftkhan_/)**
+**[Facebook](https://www.facebook.com/FTKhanFT/)**
+**[Github](https://github.com/FTKhanFT)**
+**[Medium](https://medium.com/<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/FTKhanFT/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/FTKhanFT">@FTKhanFT</a>)**
   </p>
 
 <p align="center">
