Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="main-content">
       <h3>
 <a id="hey-its-tanvir-ahmed-khan-here" class="anchor" href="#hey-its-tanvir-ahmed-khan-here" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hey, It's Tanvir Ahmed Khan here</h3>
-<p>I am Software Engineer and Full stack Developer. I love experimenting with new technologies and building small projects.</p>
+<p>I am Software Engineer and Android Developer. I love experimenting with new technologies and building small projects.</p>
 <ul>
 <li>
 <g-emoji class="g-emoji" alias="computer" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4bb.png">💻</g-emoji> Working as a <strong>Senior Developer</strong> in <a href="https://www.rrad.com.bd">Robust Research And Development Ltd.</a>
@@ -39,7 +39,7 @@
   <br>
 <ul>
 <li>
-<p>In mean time, I create visual and artistic images using photoshop, you can check those are on <strong><a href="https://www.instagram.com/_ftkhan_/">My Instagram</a></strong>.</p>
+<p>In mean time, I am a photographer, you can check on <strong><a href="https://www.instagram.com/_ftkhan_/">My Instagram</a></strong>.</p>
 </li>
 <li>
 <p>While Coding, Listening Music and developing useful code. <g-emoji class="g-emoji" alias="star" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2b50.png">⭐️</g-emoji></p>
@@ -53,9 +53,8 @@
 </ul>
 </details>
 <hr>
-
 <p align="center">
-    <a href="" alt="Visitor Count"><img src="https://visitor-badge.glitch.me/badge?page_id=FTKhanFT.FTKhanFT"></a>
+    <a href="" alt="Visitor Count"><img src="https://komarev.com/ghpvc/?username=FTKhanFT"></a>
   </p>
 
       <footer class="site-footer">
