CI status added in Index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 </details>
 <hr>
 <p align="center">
+    <a href="https://github.com/FTKhanFT/FTKhanFT/actions?query=workflow%3ACI" alt="CI"><img src="https://github.com/FTKhanFT/FTKhanFT/workflows/CI/badge.svg"></a>
     <a href="" alt="Visitor Count"><img src="https://komarev.com/ghpvc/?username=FTKhanFT"></a>
   </p>
 
