Fixed Linkedin Profile Badge

--- a/index.html
+++ b/index.html
@@ -52,9 +52,30 @@
 </li>
 </ul>
 </details>
-<p>
-  <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="ftkhanft"><a class="LI-simple-link" href='https://bd.linkedin.com/in/ftkhanft?trk=profile-badge'>Tanvir Ahmed Khan</a></div>
-  <p>
+<p align="center">
+  <div
+    class='LI-profile-badge'
+    data-version='v1'
+    data-size='large'
+    data-locale='en_US'
+    data-type='horizontal'
+    data-theme='light'
+    data-vanity='ftkhanft'
+  >
+    <a
+      class='LI-simple-link'
+      href='https://bd.linkedin.com/in/ftkhanft?trk=profile-badge'
+    >
+      Tanvir Ahmed Khan
+    </a>
+  </div>
+   <script
+    type='text/javascript'
+    src='https://platform.linkedin.com/badges/js/profile.js'
+    async
+    defer
+  ></script>
+  </p>
 <hr>
 <p align="center">
     <a href="https://github.com/FTKhanFT/FTKhanFT/actions?query=workflow%3ACI" alt="CI"><img src="https://github.com/FTKhanFT/FTKhanFT/workflows/CI/badge.svg"></a>
