Fixed Linkedin Profile Badge

--- a/index.html
+++ b/index.html
@@ -53,7 +53,28 @@
 </ul>
 </details>
 <p align="center">
-  <div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="ftkhanft">[Tanvir Ahmed Khan](https://bd.linkedin.com/in/ftkhanft?trk=profile-badge)</div>
+  <div
+    class='LI-profile-badge'
+    data-version='v1'
+    data-size='large'
+    data-locale='en_US'
+    data-type='horizontal'
+    data-theme='light'
+    data-vanity='ftkhanft'
+  >
+    <a
+      class='LI-simple-link'
+      href='https://bd.linkedin.com/in/ftkhanft?trk=profile-badge'
+    >
+      Tanvir Ahmed Khan
+    </a>
+  </div>
+   <script
+    type='text/javascript'
+    src='https://platform.linkedin.com/badges/js/profile.js'
+    async
+    defer
+  ></script>
   </p>
 <hr>
 <p align="center">
